--- a/css/general.css
+++ b/css/general.css
@@ -27,8 +27,7 @@ body {
 
 .grid {
   display: grid;
-  row-gap: 9.6rem;
-  column-gap: 4.8rem;
+  gap: 4.8rem;
 }
 
 .grid--2-cols {
@@ -46,5 +45,10 @@ body {
 
 .heading-h3 {
   font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.heading-h4 {
+  font-size: 2.2rem;
   margin-bottom: 2rem;
 }
