--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,18 @@
   font-size: 1.8rem;
   width: 100%;
 
-  padding: 1.2rem;
+  /* padding: 1.2rem; */
   margin: 0 auto;
-}
-
-.sticky .navigation {
-  height: 6rem;
 }
 
 .navigation {
   display: flex;
   /* justify-content: space-between; */
-  /* height: 4rem; */
+  height: 7rem;
+}
+
+.nav-wrapper {
+  height: 7rem;
 }
 
 .navigation-list {
@@ -50,10 +50,24 @@
   width: 100%;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.877);
+  z-index: 999;
+  height: 7rem !important;
+  padding-top: 0;
+  padding-bottom: 0;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
+}
+
 /* --------------- HERO / ABOUT -------------------- */
 
 .hero-section {
   margin: 9.6rem 0;
+  scroll-margin-top: 10rem;
 }
 
 .hero {
@@ -140,6 +154,7 @@
 
 .section-skills {
   margin-bottom: 9.6rem;
+  scroll-margin-top: 10rem;
 }
 
 .skills-element {
@@ -150,10 +165,12 @@
   border-radius: 5px;
   transition: all 0.5s;
   cursor: default;
+  box-shadow: 0 0.2rem 1rem 0 rgba(0, 0, 0, 0.08);
 }
 
 .skills-element:hover {
   background-color: #f0f0f0;
+  transform: translateY(-4px);
 }
 
 .skills-flex {
@@ -167,7 +184,12 @@
   width: 100%;
 }
 
-/* ---------- PORTFOLIO -------------- */
+/* ---------- PROJECTS -------------- */
+
+.section-projects {
+  margin-bottom: 9.6rem;
+  scroll-margin-top: 10rem;
+}
 
 .project-box {
   padding: 3.2rem;
@@ -217,3 +239,109 @@
   opacity: 1;
   right: 8px;
 }
+
+/* --------------------- CONTACT --------------------- */
+
+.section-contact {
+  margin-bottom: 9.6rem;
+  text-align: center;
+  scroll-margin-top: 20px;
+}
+
+.contact-form {
+  padding: 2rem;
+}
+
+.row {
+  width: 100%;
+  height: 3rem;
+  padding: 0 1rem;
+}
+
+.big {
+  width: 100%;
+  padding: 1rem;
+}
+
+input {
+  margin-bottom: 1rem;
+}
+
+label {
+  display: flex;
+}
+
+input:focus,
+.big:focus {
+  outline: none !important;
+  border: 2px solid #3498db;
+}
+
+/* input:hover {
+  border: 2px solid #3498db;
+} */
+
+.send {
+  text-align: center;
+  margin: 0 auto;
+  background: none;
+  border: 2px solid transparent;
+  padding: 1.2rem 2.4rem;
+  transition: all 0.3s;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 1.5px;
+  font-weight: 500;
+  font-family: inherit;
+}
+
+.send:hover {
+  border: 2px solid #3498db;
+  color: #3498db;
+}
+
+/* -------------------- FOOTER ----------------------- */
+
+.footer {
+  padding: 10rem 0 10rem 0;
+  /* background-image: linear-gradient(#fff, #cccccc); */
+  background-image: linear-gradient(#fff, #e0e0e0);
+  /* border-top: 1px solid #e0e0e0; */
+}
+
+.footer-text-box {
+  display: grid;
+}
+
+.footer p {
+  font-size: 1.4rem;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: inherit;
+  transition: all 0.5s;
+}
+
+.footer-link:hover {
+  color: #3498db;
+}
+
+.footer-text {
+  margin-bottom: 3rem;
+}
+
+.copy {
+  margin-top: 5rem;
+  /* justify-self: start; */
+}
+
+.social-links-footer {
+  justify-content: end;
+  align-items: end;
+  height: 100%;
+}
+
+/* .footer-social-grid {
+  height: 100%;
+} */
