--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,97 @@
+/* --------------- DARK MODE --------------------- */
+
+.dark {
+  /* background-color: #1f1b24; */
+  /* #0e0e10 */
+  /* background-color: #121212; */
+  background-color: #0e0e10;
+  color: #ecf0f1;
+  transition: all 0.5s ease;
+}
+.dark .header {
+  transition: all 0.5s ease;
+}
+
+.dark .sticky {
+  /* background-color: rgba(70, 0, 168, 0.87); */
+  background-color: hsla(0, 0%, 9%, 0.87);
+  /* box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem #181818; */
+  /* background-color: rgba(99, 0, 238, 0.87); */
+  /* box-shadow: 0.5rem 0.5rem 0.5rem #6300ee; */
+  /* color: #03dac7; */
+}
+
+.dark .navigation-list a:hover,
+.dark .navigation-list a:active {
+  color: #ecf0f1;
+}
+
+.dark .navigation-list a:after {
+  border-bottom: 2px solid #bb86fc;
+}
+
+.dark .social-links {
+  color: #bb86fc;
+}
+
+.dark .github:hover {
+  color: #ecf0f1;
+}
+
+.dark .facebook:hover {
+  color: #5576ba;
+}
+
+.dark .insta:hover {
+  color: #cd486b;
+}
+
+.dark .icon-mobile-nav {
+  color: #ecf0f1;
+}
+
+.dark .footer {
+  border-top: none;
+  background-image: linear-gradient(#0e0e10, #2f2f32);
+  /* border-top: 1px solid #18181b; */
+}
+
+.dark .skills-element {
+  background-color: #bb86fc;
+}
+
+.dark .skills-element:hover {
+  background-color: #3700b3;
+  /* #3700B3 */
+}
+
+.dark .view-project {
+  background-color: #bb86fc;
+}
+
+.dark .view-project:hover {
+  background-color: #3700b3;
+}
+
+.dark .project {
+  border-radius: 5px;
+  background-color: #18181b;
+  /* border: 1px solid #3700b3; */
+}
+
+.dark .send {
+  color: #ecf0f1;
+}
+
+.dark .send:hover {
+  border: 1px solid #bb86fc;
+  color: #bb86fc;
+}
+
+.dark .footer-link:hover {
+  color: #bb86fc;
+}
+
 /* --------------- NAVIGATION -------------------- */
 
 .header {
@@ -12,7 +106,7 @@
   display: flex;
   /* justify-content: space-between; */
   height: 7rem;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
 }
 
 .nav-wrapper {
@@ -33,13 +127,18 @@
   text-decoration: none;
   position: relative;
   color: inherit;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
+}
+
+.navigation-list a:hover,
+.navigation-list a:active {
+  color: #3700b3;
 }
 
 .navigation-list a:after {
   content: "";
   display: block;
-  border-bottom: 2px solid #3498db;
+  border-bottom: 2px solid #3700b3;
   width: 0;
   position: absolute;
   left: 0;
@@ -50,6 +149,8 @@
 .navigation-list a:hover:after {
   width: 100%;
 }
+
+/* ----------------- STICKY ---------------------------- */
 
 .sticky {
   position: fixed;
@@ -64,10 +165,69 @@
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
 }
 
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.877);
+  z-index: 999;
+  height: 6rem !important;
+  padding-top: 0;
+  padding-bottom: 0;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
+}
+
+/* ------------------ MOBILE ------------------------- */
+
+.btn-light-dark-mode {
+  position: absolute;
+  top: 10px;
+  border: none;
+  background: none;
+  cursor: pointer;
+  /* display: flex; */
+  /* align-items: center; */
+}
+
+.btn-mobile-nav {
+  display: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.icon-mode {
+  height: 3.6rem;
+  width: 3.6rem;
+  color: #333;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.sun {
+  color: #feca57;
+}
+
+.moon {
+  color: #8395a7;
+}
+
+.icon-mode[name="sunny"] {
+  display: none;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /* --------------- HERO / ABOUT -------------------- */
 
 .hero-section {
-  margin: 9.6rem 0;
+  margin: 4.8rem 0 9.6rem 0;
   scroll-margin-top: 10rem;
 }
 
@@ -119,12 +279,16 @@
   list-style: none;
 }
 
-.github,
+ul li a {
+  transition: all 0.5s ease;
+}
+
+/* .github,
 .youtube,
 .facebook,
 .insta {
-  transition: all 0.5s;
-}
+  transition: all 0.3s;
+} */
 
 .github:hover {
   color: #000;
@@ -164,7 +328,7 @@
   background-color: #e0e0e0;
   border: none;
   border-radius: 5px;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
   cursor: default;
   box-shadow: 0 0.2rem 1rem 0 rgba(0, 0, 0, 0.08);
 }
@@ -217,7 +381,7 @@
   padding: 0.8rem 1.6rem;
   border-radius: 5px;
   position: relative;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
 }
 
 .view-project::after {
@@ -226,7 +390,7 @@
   opacity: 0;
   top: 1px;
   right: -20px;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
   font-size: 20px;
 }
 
@@ -288,12 +452,13 @@ input:focus,
   background: none;
   border: 1px solid transparent;
   padding: 1.2rem 2.4rem;
-  transition: all 0.3s;
+  transition: all 0.5s ease;
   text-transform: uppercase;
   font-size: 1.2rem;
   letter-spacing: 1.5px;
   font-weight: 500;
   font-family: inherit;
+  margin-top: 2rem;
 }
 
 .send:hover {
@@ -305,7 +470,8 @@ input:focus,
 
 .footer {
   padding: 10rem 0;
-  background-image: linear-gradient(#fff, #e0e0e0);
+  background-color: #f0f0f0;
+  border-top: 1px solid #e0e0e0;
 }
 
 .footer-text-box {
@@ -319,7 +485,7 @@ input:focus,
 .footer-link {
   text-decoration: none;
   color: inherit;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
 }
 
 .footer-link:hover {
