--- a/css/mutual.css
+++ b/css/mutual.css
@@ -21,6 +21,9 @@
   color: #ecf0f1;
 }
 
+.dark .linkedin:hover {
+  color: #338ec1;
+}
 .dark .facebook:hover {
   color: #5576ba;
 }
@@ -32,10 +35,14 @@
 .dark .footer {
   border-top: none;
   background-image: linear-gradient(#0e0e10, #2f2f32);
-  /* border-top: 1px solid #18181b; */
+  border-top: 1px solid #18181b;
 }
 
 /* -------------------- NAVIGATION ------------------------- */
+
+.nav-wrapper {
+  height: 7rem;
+}
 
 .navigation {
   display: flex;
@@ -66,6 +73,39 @@
 .icon-mode {
   height: 3.6rem;
   width: 3.6rem;
+}
+
+.header {
+  width: 100%;
+  height: 7rem;
+  margin: 0 auto;
+  transition: all 0.5s ease;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.877);
+  z-index: 999;
+  height: 7rem !important;
+  padding-top: 0;
+  padding-bottom: 0;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
+}
+
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.877);
+  z-index: 999;
+  height: auto !important;
+  padding-top: 0;
+  padding-bottom: 0;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
 }
 
 /*  --------------------- FOOTER --------------------------- */
@@ -127,6 +167,10 @@ ul li a {
 
 .github:hover {
   color: #000;
+}
+
+.linkedin:hover {
+  color: #0072b1;
 }
 
 .youtube:hover {
